--- a/src/components/item-add-form/item-add-form.css
+++ b/src/components/item-add-form/item-add-form.css
@@ -1,7 +1,30 @@
-.item-add-form {
-    margin-top: 10px;
+.item-add-form__plus {
+    padding: 0px 1px;
 }
 
-.item-add-form input {
-    margin-right: 3px;
+.item-add-form input[type="text"] {
+    color: #ddd;
+}
+
+
+.item-add-form input[type="text"]:focus {
+    color: #000;
+}
+
+.item-add-form__text {
+	flex: 1 1 auto;
+	display: block;
+    padding: .25rem .5rem;
+    margin-bottom: 0;
+    font-size: .875rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: white;
+    border: 1px solid #ced4da;
+	outline: none;
+	overflow: hidden;
+	resize: none;
+    border-top-right-radius: .25rem;
+    border-bottom-right-radius: .25rem;
 }
