--- a/src/components/todo-list-item/todo-list-item.css
+++ b/src/components/todo-list-item/todo-list-item.css
@@ -1,24 +1,89 @@
-.todo-list-item {
-  font-size: 1.25rem;
+ .todo-list-item {
+ 	font-size: 1.25rem;
+ 	flex: 1 1 auto;
+ 	flex-wrap: nowrap;
+ }
+
+ .todo-list-item button {
+ 	width: 35px;
+ }
+
+ .todo-list-item__handle {
+ 	width: 30px;
+ 	text-align: center;
+ 	color: #ccc;
+ 	margin: 0px 1px;
+ }
+
+ .todo-list-item__handle i {
+ 	margin: 0px 1px;
+ }
+
+ .todo-list-item__handle--inactive i {
+ 	display: none;
+ 	margin: 0px 1px;
+ }
+
+ .todo-list-item__handle--active i {
+ 	margin: 0px 1px;
+ }
+
+ .todo-list-item__text {
+ 	flex: 1 1 auto;
+ 	display: block;
+ 	padding: .25rem .5rem;
+ 	margin-bottom: 0;
+ 	font-size: .875rem;
+ 	font-weight: 400;
+ 	line-height: 1.5;
+ 	color: #495057;
+ 	background-color: white;
+ 	border: 1px solid #ced4da;
+ 	outline: none;
+ 	overflow: hidden;
+ 	resize: none;
+ }
+
+ .todo-list-item.done .todo-list-item__text {
+ 	color: #ccc
+ }
+
+ .todo-list-item.important .todo-list-item__text {
+ 	font-weight: bold;
+ 	color: steelblue;
+ }
+
+ .todo-list-item.important.todo-list-item.done .todo-list-item__text {
+ 	font-weight: bold;
+ 	color: rgb(134, 168, 195);
+ }
+
+ /* 
+.todo-list-item input[type="checkbox"] {
+
+	-webkit-appearance: none;
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	 box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05); 
+	padding: 9px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+} 
+
+
+.todo-list-item input[type="checkbox"]:checked {
+	background-color: #e9ecee;
+	border: 1px solid #adb8c0;
+	 box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1); 
+	color: #99a1a7;
 }
 
-.todo-list-item button {
-  width: 35px;
-  margin: 3px;
-}
-
-.todo-list-item-label {
-  margin-left: 1.25rem;
-  line-height: 35px;
-  cursor: pointer;
-  user-select: none;
-}
-
-.todo-list-item.done .todo-list-item-label {
-  text-decoration: line-through;
-}
-
-.todo-list-item.important .todo-list-item-label {
-  font-weight: bold;
-  color: steelblue;
-}
+.todo-list-item input[type="checkbox"]:checked:after {
+	content: '\2714';
+	font-size: 14px;
+	position: absolute;
+	top: -2px;
+	left: 0px;
+	color: #99a1a7;
+} */
